[gd_scene load_steps=2 format=3 uid="uid://ddesjyhp5hn3t"]

[ext_resource type="Script" uid="uid://jcxkl2qae4hg" path="res://UI/SkillSelectionMenu.gd" id="1_skill_menu"]

[node name="SkillSelectionMenu" type="Panel"]
z_index = 100
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -250.0
offset_right = 200.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_skill_menu")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "选择技能"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="SkillListContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="SkillInfoPanel" type="Panel" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/SkillInfoPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2

[node name="SkillNameLabel" type="Label" parent="VBoxContainer/SkillInfoPanel/VBoxContainer"]
layout_mode = 2
text = "技能名称"
horizontal_alignment = 1

[node name="SkillDescLabel" type="Label" parent="VBoxContainer/SkillInfoPanel/VBoxContainer"]
layout_mode = 2
text = "技能描述"
autowrap_mode = 2

[node name="SkillCostLabel" type="Label" parent="VBoxContainer/SkillInfoPanel/VBoxContainer"]
layout_mode = 2
text = "MP消耗: 0"

[node name="SkillRangeLabel" type="Label" parent="VBoxContainer/SkillInfoPanel/VBoxContainer"]
layout_mode = 2
text = "攻击范围: 0像素"

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="CancelButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "取消"
